--- a/css/scss/base/_base.scss
+++ b/css/scss/base/_base.scss
@@ -11,7 +11,7 @@ body{
     width: auto;
     margin: 0;
     padding: 0;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'DM Sans', sans-serif;
 }
 
 .container{
@@ -20,9 +20,34 @@ body{
     margin: 0 auto;
 }
 
+/** 
+HEADER
+*/
 .header{
+    margin-top: 2em;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     &-navigation{
-        &-item{
+        ul{
+            display: flex;
+            align-items: center;
+            flex-wrap: wrap;
+            list-style: none;
+            padding: 0 ;
+            justify-content: center;
+        }
+        &-item{          
+            padding: 0.2rem .5rem;
+            margin: .2rem .2rem;
+            border: 0.5px solid #C4C4C4;
+            box-sizing: border-box;
+            border-radius: 11px;
+            text-align: center;
+            font-size: 12px;
+            font-weight: 500;    
+            
             a{
                 color: $color_primary_one;
             }
@@ -33,7 +58,85 @@ body{
     &-photographesTitle{
         color: $color_primary_one;
         font-weight: 400;
-        font-family: DM Sans;
+        &:hover, &:focus {
+            font-weight: 700;
+        }
+    }
+}
+
+.main{
+    margin: 2rem 0;
+}
+/** 
+ARTICLES
+*/
+.articles{
+    .photographe{
+        &-portrait{
+            display: block;
+            text-align: center;
+        }
+
+        &-img{
+            width: 50%;
+            border-radius: 50%;
+            object-fit: cover;
+        }
+
+        &-name{
+            color: $color_primary_two;
+            font-weight: 400;
+            margin: 0.5rem 0;
+        }
+
+        &-description{
+            text-align: center;
+        }
+
+        &-location{
+            color: $color_primary_two;
+            font-weight: 400;
+            font-size: 13px;
+            margin: 0.5rem 0;
+        }
+
+        &-slogan{
+            font-size: 10px;
+            margin: 0.5rem 0;
+        }
+
+        &-price{
+            font-size: 9px;
+            margin: 0.5rem 0;
+            color : $color_secondary_two;
+        }
+
+        &-tags{
+            ul{
+                width: 100%;
+                display: flex;
+                align-items: center;
+                list-style: none;
+                padding: 0 ;
+                justify-content: center;
+            }
+
+            &-item{
+                padding: 0.2rem .5rem;
+                margin: .2rem .2rem;
+                border: 0.5px solid #C4C4C4;
+                box-sizing: border-box;
+                border-radius: 11px;
+                text-align: center;
+                font-size: 12px;
+                font-weight: 500;
+
+                a{
+                    color: $color_primary_one;
+                }
+            }
+            
+        }
     }
 }
 
