--- a/css/scss/responsive/_responsive.scss
+++ b/css/scss/responsive/_responsive.scss
@@ -10,13 +10,7 @@ $min_width_desktop : 599px;
 @mixin mobile-only {
     @media only screen and (max-width: $max_width_mobile){
         .header{
-            margin-top: 2em;
-            width: 100%;
-            list-style: none;
-            display: flex;
             flex-wrap: wrap;
-            justify-content: space-between;
-            align-items: center;
             &-svg{
                 order: 1;
                 svg{
@@ -26,28 +20,6 @@ $min_width_desktop : 599px;
 
             &-navigation{
                 order: 3;
-
-                ul{
-                    width: 100%;
-                    display: flex;
-                    align-items: center;
-                    flex-wrap: wrap;
-                    list-style: none;
-                    padding: 0 ;
-                    justify-content: center;
-                }
-
-                &-item{
-                    padding: 0.2rem .5rem;
-                    margin: .2rem .2rem;
-                    border: 0.5px solid #C4C4C4;
-                    box-sizing: border-box;
-                    border-radius: 11px;
-                    text-align: center;
-                    font-size: 14px;
-                    font-weight: 500;
-                    
-                }
             }
 
             &-photographesTitle{
@@ -55,48 +27,53 @@ $min_width_desktop : 599px;
                 font-size: 14px;
             }
         }
+        .articles{
+            .photographe{
+                margin: 1rem 0;
 
+                &-img{
+                    height: 150px;
+                }
         
-
+            }
+        }
     }
 }
 
 /*TABLETTE*/
 @mixin tablette-only {
     @media only screen and (min-width: 768px) and (max-width: 1100px){
-         /* SECTION FONCTIONEMMENT */
-        .operation{
-            .container{
-                display: flex;
-                flex-wrap : wrap;
-                justify-content: space-between;
-            }
-
-            &__step{
-                width: 30%;
-
-                .legende{
-                    font-size: 14px;
+        .header{
+            flex-wrap: wrap;
+            &-svg{
+                order: 1;
+                svg{
+                    width: 150px;
                 }
             }
-        }
-        /* SECTION RESTAURANT */
-        .restaurants{
-            .cards{
-                .card{
-                    margin: 0 0 1.5rem 0;
-                    &__img{
-                        width: 100%;
-                        height: 180px;
-                        object-fit :cover;
-                    }
-                } 
+
+            &-navigation{
+                order: 3;
+                width: 100%;
+            }
+
+            &-photographesTitle{
+                order: 2;
+                font-size: 14px;
             }
         }
-
-        /* SECTION MENU */
-        .menu{
-            margin-top: -10rem;
+        .articles{
+            display: flex;
+            flex-wrap: wrap;
+            .photographe{
+                margin: 1rem 0;
+                width: 50%;
+                &-img{
+                    width: 40%;
+                    height: 150px;
+                }
+        
+            }
         }
     }
 }
@@ -105,58 +82,23 @@ $min_width_desktop : 599px;
 @mixin desktop-plus-only {
     @media only screen and (min-width: 1101px){
         .container{
-            padding : 0 2rem;
+            padding: 0 2rem;
         }
-
-        .operation{
-            .container{
-                display: flex;
-                flex-wrap : wrap;
-                justify-content: space-between;
-            }
-
-            &__step{
-                width: 32%;
-                .legende{
-                    font-size: 14px;
+        .articles{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            .photographe{
+                margin: 1rem 0;
+                width: 29%;
+                &-img{
+                    width: 50%;
+                    height: 150px;
                 }
-            }
-        }
-
-        .restaurants{
-            .cards{
-                display: flex;
-                flex-wrap: wrap;
-                justify-content: space-between;
-                .card{
-                    width: 49%;
-                    &__img{
-                        width: 100%;
-                        height: 180px;
-                        object-fit :cover;
-                    }
-                } 
-            }
-        }
-
-        .menu{
-            .allmenu{
-                display: flex;
-                justify-content: space-between;
-                .listmenu{
-                    width: 32%;
-                }
-            }
-        }
-
-        .featured_image{
-            height: 300px;
-            object-fit: cover;
-        }
-
         
-
-    }
+            }
+        }
+    }    
 }
 
 @include mobile-only;
