--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
   width: auto;
   margin: 0;
   padding: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: "DM Sans", sans-serif;
 }
 
 .container {
@@ -19,13 +19,104 @@ body {
   margin: 0 auto;
 }
 
+/** 
+HEADER
+*/
+.header {
+  margin-top: 2em;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header-navigation ul {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  list-style: none;
+  padding: 0;
+  justify-content: center;
+}
+.header-navigation-item {
+  padding: 0.2rem 0.5rem;
+  margin: 0.2rem 0.2rem;
+  border: 0.5px solid #C4C4C4;
+  box-sizing: border-box;
+  border-radius: 11px;
+  text-align: center;
+  font-size: 12px;
+  font-weight: 500;
+}
 .header-navigation-item a {
   color: #901C1C;
 }
 .header-photographesTitle {
   color: #901C1C;
   font-weight: 400;
-  font-family: DM Sans;
+}
+.header-photographesTitle:hover, .header-photographesTitle:focus {
+  font-weight: 700;
+}
+
+.main {
+  margin: 2rem 0;
+}
+
+/** 
+ARTICLES
+*/
+.articles .photographe-portrait {
+  display: block;
+  text-align: center;
+}
+.articles .photographe-img {
+  width: 50%;
+  border-radius: 50%;
+  object-fit: cover;
+}
+.articles .photographe-name {
+  color: #D3573C;
+  font-weight: 400;
+  margin: 0.5rem 0;
+}
+.articles .photographe-description {
+  text-align: center;
+}
+.articles .photographe-location {
+  color: #D3573C;
+  font-weight: 400;
+  font-size: 13px;
+  margin: 0.5rem 0;
+}
+.articles .photographe-slogan {
+  font-size: 10px;
+  margin: 0.5rem 0;
+}
+.articles .photographe-price {
+  font-size: 9px;
+  margin: 0.5rem 0;
+  color: #525252;
+}
+.articles .photographe-tags ul {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  list-style: none;
+  padding: 0;
+  justify-content: center;
+}
+.articles .photographe-tags-item {
+  padding: 0.2rem 0.5rem;
+  margin: 0.2rem 0.2rem;
+  border: 0.5px solid #C4C4C4;
+  box-sizing: border-box;
+  border-radius: 11px;
+  text-align: center;
+  font-size: 12px;
+  font-weight: 500;
+}
+.articles .photographe-tags-item a {
+  color: #901C1C;
 }
 
 a {
@@ -38,13 +129,7 @@ a {
 /*DESKTOP ET PLUS*/
 @media only screen and (max-width: 767px) {
   .header {
-    margin-top: 2em;
-    width: 100%;
-    list-style: none;
-    display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
   }
   .header-svg {
     order: 1;
@@ -55,57 +140,48 @@ a {
   .header-navigation {
     order: 3;
   }
-  .header-navigation ul {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    list-style: none;
-    padding: 0;
-    justify-content: center;
-  }
-  .header-navigation-item {
-    padding: 0.2rem 0.5rem;
-    margin: 0.2rem 0.2rem;
-    border: 0.5px solid #C4C4C4;
-    box-sizing: border-box;
-    border-radius: 11px;
-    text-align: center;
+  .header-photographesTitle {
+    order: 2;
     font-size: 14px;
-    font-weight: 500;
+  }
+
+  .articles .photographe {
+    margin: 1rem 0;
+  }
+  .articles .photographe-img {
+    height: 150px;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 1100px) {
+  .header {
+    flex-wrap: wrap;
+  }
+  .header-svg {
+    order: 1;
+  }
+  .header-svg svg {
+    width: 150px;
+  }
+  .header-navigation {
+    order: 3;
+    width: 100%;
   }
   .header-photographesTitle {
     order: 2;
     font-size: 14px;
   }
-}
-@media only screen and (min-width: 768px) and (max-width: 1100px) {
-  /* SECTION FONCTIONEMMENT */
-  .operation .container {
+
+  .articles {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
   }
-  .operation__step {
-    width: 30%;
+  .articles .photographe {
+    margin: 1rem 0;
+    width: 50%;
   }
-  .operation__step .legende {
-    font-size: 14px;
-  }
-
-  /* SECTION RESTAURANT */
-  .restaurants .cards .card {
-    margin: 0 0 1.5rem 0;
-  }
-  .restaurants .cards .card__img {
-    width: 100%;
-    height: 180px;
-    object-fit: cover;
-  }
-
-  /* SECTION MENU */
-  .menu {
-    margin-top: -10rem;
+  .articles .photographe-img {
+    width: 40%;
+    height: 150px;
   }
 }
 @media only screen and (min-width: 1101px) {
@@ -113,43 +189,18 @@ a {
     padding: 0 2rem;
   }
 
-  .operation .container {
+  .articles {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
   }
-  .operation__step {
-    width: 32%;
+  .articles .photographe {
+    margin: 1rem 0;
+    width: 29%;
   }
-  .operation__step .legende {
-    font-size: 14px;
-  }
-
-  .restaurants .cards {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-  .restaurants .cards .card {
-    width: 49%;
-  }
-  .restaurants .cards .card__img {
-    width: 100%;
-    height: 180px;
-    object-fit: cover;
-  }
-
-  .menu .allmenu {
-    display: flex;
-    justify-content: space-between;
-  }
-  .menu .allmenu .listmenu {
-    width: 32%;
-  }
-
-  .featured_image {
-    height: 300px;
-    object-fit: cover;
+  .articles .photographe-img {
+    width: 50%;
+    height: 150px;
   }
 }
 
