--- a/css/scss/utils/_variables.scss
+++ b/css/scss/utils/_variables.scss
@@ -5,6 +5,7 @@ $color_secondary_one : #D3573C;
 $color_secondary_two : #525252;
 $color_secondary_three : #FAFAFA;
 $color_secondary_four : #901C1C;
+$color_background_btn_one :#DB8876;
 $color_tertiary : #99E2D0;
 $color_white : #ffffff;
 $color_black : #000000;
