--- a/css/style.css
+++ b/css/style.css
@@ -19,11 +19,27 @@ body {
   margin: 0 auto;
 }
 
+.linkToMain {
+  margin: 0.5rem auto;
+  background-color: #DB8876;
+  color: #000000;
+  border-radius: 5px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 23px;
+  text-align: center;
+  border: solid 1px #DB8876;
+  display: none;
+  width: 180px;
+  padding: 0.2rem;
+}
+
 /** 
 HEADER
 */
 .header {
-  margin-top: 2em;
+  margin-top: 1em;
   width: 100%;
   display: flex;
   justify-content: space-between;
