--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -1,5 +1,7 @@
 @import "./utils/variables";
 @import "./base/base";
-//@import "./layouts/_layouts";
+@import "./layouts/accueil";
+@import "./layouts/bio";
+@import "./layouts/_layouts";
 //@import "./layouts/_menus";
 @import "./responsive/_responsive";
