--- a/css/scss/utils/_variables.scss
+++ b/css/scss/utils/_variables.scss
@@ -6,7 +6,11 @@ $color_secondary_two : #525252;
 $color_secondary_three : #FAFAFA;
 $color_secondary_four : #901C1C;
 $color_background_btn_one :#DB8876;
+$color_background_modal :$color_background_btn_one;
 $color_tertiary : #99E2D0;
 $color_white : #ffffff;
 $color_black : #000000;
+$color_label_modal : #312E2E;
+$background_color_lightbox : #FFFFFF;
+$background_color_bio : #FAFAFA;
 
