--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -4,4 +4,4 @@
 @import "./layouts/bio";
 @import "./layouts/_layouts";
 //@import "./layouts/_menus";
-@import "./responsive/_responsive";
+//@import "./responsive/_responsive";
