--- a/css/scss/layouts/_layouts.scss
+++ b/css/scss/layouts/_layouts.scss
@@ -1,4 +1,4 @@
-
+/** CSS HEADER / FOOTER */
 /** 
 HEADER
 */
@@ -26,21 +26,23 @@ HEADER
             justify-content: center;
         }
         &-item{          
-            padding: 0.2rem .5rem;
-            margin: .2rem .2rem;
-            border: 0.5px solid #C4C4C4;
-            box-sizing: border-box;
-            border-radius: 11px;
-            text-align: center;
-            font-size: 12px;
-            font-weight: 500;
-
             a{
-                transition-duration: 0.2s;
+                padding: 0.2rem .5rem;
+                margin: .2rem .2rem;
+                border: 0.5px solid #C4C4C4;
+                box-sizing: border-box;
+                border-radius: 11px;
+                text-align: center;
+                font-size: 12px;
+                font-weight: 500;
+                line-height: 2rem;
                 color: $color_primary_one;
                 &:focus,&:hover{
                     font-weight: bold;
                     font-size: 20px;
+                    background-color: $color_primary_one;
+                    color: $color_white;
+                    border: 0.5px solid $color_primary_one;
                 }
             }
             
@@ -54,6 +56,51 @@ HEADER
             font-weight: 700;
         }
     }
+}
+
+/** 
+* RESPONSIVE
+*/
+
+@media only screen and (max-width: 1024px){
+    .header{
+        flex-wrap: wrap;
+        &-svg{
+            order: 1;
+            svg{
+                width: 150px;
+            }
+        }
+
+        &-navigation{
+            order: 3;
+            width: 100%;
+        }
+
+        &-photographesTitle{
+            order: 2;
+            font-size: 14px;
+        }
+        
+    }//.header{
+}
+
+
+@media only screen and (min-width: 768px) and (max-width: 1100px){
+    .content{
+         margin: 5% auto;
+    }
+    .portfolio-img {
+         height: 700px;
+     }
+
+     .filter{
+         display: none;
+     }
+
+     .popular{
+         display: none;
+     }
 }
 
 
